--- a/layouts/partials/content/aside.html
+++ b/layouts/partials/content/aside.html
@@ -7,7 +7,7 @@
 
 			<h2 class="font-bold text-xl mb-8">Recent Post</h2>
 
-			{{ range where .Site.RegularPages "Type" "posts" | first 5}}
+			{{ range first 5 .Site.RegularPages }}
 
 				{{- partial "content/list-post.html" . -}}
 
