--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,8 +15,15 @@
 			<div class="relative rounded-full py-1.5 px-6 bg-zinc-100 hover:bg-zinc-200 text-xl font-bold uppercase mx-2">
 				{{ if .IsHome}}<h1><a class="before:content-[''] before:z-10 before:top-0 before:right-0 before:left-0 before:bottom-0 before:absolute before:pointer-events-auto" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
 			{{ else }}<h2><a class="before:content-[''] before:z-10 before:top-0 before:right-0 before:left-0 before:bottom-0 before:absolute before:pointer-events-auto" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h2>{{ end }}
-			</div>
-		</div>
+			</div>		<div class="flex items-center flex-wrap mx-2" style="gap: 6px;">
+			{{- range $i, $section := site.Params.mainSections -}}
+				{{- with site.GetPage "section" $section -}}
+					<a class="px-4 py-1.5 text-sm font-semibold text-black bg-zinc-100 rounded-full hover:bg-zinc-200 transition-all" href="{{ .Permalink }}">
+						{{ title $section }}
+					</a>
+				{{- end -}}
+			{{- end -}}
+		</div>		</div>
 		<div class="flex items-center ml-auto">
 			<button class="flex items-center rounded-full p-3 bg-zinc-100 hover:bg-zinc-200 toggle-button" data-target="search-bar">
 				<svg width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
