--- a/layouts/partials/terms.html
+++ b/layouts/partials/terms.html
@@ -17,7 +17,7 @@ For a given taxonomy, renders a list of terms assigned to the page.
 
       <li class="font-semibold my-4">{{ $label }}:</li>
       {{- range . }}
-        <li ><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
+        <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="{{ .RelPermalink }}" lang="mr" style="font-family: 'Noto Sans Devanagari', 'Noto Sans', system-ui, sans-serif; unicode-bidi: isolate;">{{ .Page.Title }}</a></li>
       {{- end }}
     </ul>
 
